import "knowledge/pub/metadatas.proto";
import "knowledge/pub/common.proto";
import "knowledge/pub/formats.proto";
import "knowledge/pub/properties.proto";
import "knowledge/pub/knowledge.proto";

package knowledge.pub.mixer;

message VideoBrief{
    optional string version = 1 [default = "unknown"];
    optional int64 id = 2;
    optional Brief brief = 3;
    optional Image image = 4;
    optional Release release = 5;
    optional Content content = 6;
    optional Keyword keyword = 7;
    optional Control control = 8;
    optional Format format = 9;
    optional Album album = 10;
    optional FilmTv film_tv = 11;
    optional User user = 12;
    optional Official official = 13;
    optional Mark mark = 14;
    optional Paopao paopao = 15;
    optional Baidu baidu = 16;
    optional Interact interact = 17;
    optional Editor editor = 18;
    optional Music music = 19;
    optional Ip ip = 20;
    repeated Category categories = 21;
    optional Pps pps = 22;
    optional Collection collection = 23;
    optional People people = 24;
    optional Tag tag = 25;
    // album对应第一集子视频信息,不冗余存储,在video-service中覆盖
    optional ChildInfo first_video = 26;
    // album对应最后子视频信息,不冗余存储,在video-service中覆盖
    optional ChildInfo last_video = 27;
    // vb储存到cb的更新时间
    optional int64 update_time = 28;
    repeated ClipSceneShot clipSceneShot = 29;
    repeated Bitrate bitrate = 30;
    
    message Brief{
        optional string title = 1;
        optional string short_title = 2;
        optional string subtitle = 3;
        optional string description = 4;
        optional string prompt_description = 5;
        optional string page_url = 6;
        optional string image_url = 7;
        optional float sns_score = 8;
    }

    message Collection{
        repeated knowledge.pub.Collection super_album_collection = 1;
        optional int32 total_item_number = 2;
        repeated EpisodeInfo episode_info = 3;
        repeated EpisodeInfo album_info = 4;
        optional CollectionCommon.CollectionType collection_type = 5;
        optional int32 child_order = 6;
        optional knowledge.pub.PlaylistType playlist_type = 7;
        optional string related_album_title = 8;
        repeated EpisodeInfo related_album = 9;
        repeated EpisodeInfo related_recommend_video = 10;
    }

    message Album{
        optional int64 id = 1;
        optional int32 total_episode_number = 2;
        optional int32 latest_episode_number = 3;
        optional int32 child_episode_order = 4;
        optional string title = 5;
        optional string page_url = 6;
        optional string image_url = 7;
        optional string prompt_description = 8;
        optional bool is_boss_mixer = 9;
        optional bool is_source = 10;
        optional int64 first_video_id = 11;
        optional int64 last_video_id = 12;
        optional int32 season = 13;
        optional string update_strategy = 14;
        optional string short_update_strategy = 15;
        optional int64 cinema_offline_time = 16;
        optional int32 phase = 17;
        repeated EpisodeInfo episode_info = 18;
        optional int32 available_episode_number = 19;
        optional int32 first_vip_episode_order = 20;
        optional string subtitle = 21;
        optional string head_image = 22;
        optional string content_provider = 23;
        repeated AvailableMonthOfYear available_episode_date = 24;
    }

    message Content{
        optional knowledge.pub.ContentType content_type = 1;
        optional knowledge.pub.EpisodeType episode_type = 2;
        optional int32 channel_id = 3;
        optional bool is_solo = 4;
        optional SpecialContentType special_content_type = 5;
        repeated int64 topic_id = 6;
    }

    message Paopao{
        optional knowledge.pub.PaopaoSummary circle_summary = 1;
        optional bool show_circle = 2;
    }

    message Interact{
        optional bool reward_allowed = 1;
        optional bool show_up_down = 2;
        optional bool comment_allowed = 3;
        optional int64 up_count = 4;
        optional int64 down_count = 5;
        repeated knowledge.pub.VoteSummary vote_summary = 6;
        optional int64 qitan_id = 7;
        optional bool is_download_allowed = 8;
        repeated knowledge.pub.Notice notice = 9;
        optional int64 comments_count = 11;
        optional SnsStarNumberInfo sns_star_number_info = 12;
        optional int64 share_count = 13;
    }

    message Mark{
        optional knowledge.pub.PayMark pay_mark = 1;
        optional string pay_mark_url = 2;
        repeated knowledge.pub.VipType vip_type = 3;
        optional bool iqiyi_exclusive = 4;
        optional bool iqiyi_produced = 5;
        optional knowledge.pub.Boss.Status boss_status = 6;
        optional bool is_member_only = 7 [default = false];
        optional bool is_member_free = 8 [default = true];
        optional bool is_member_downloadable_only = 9 [default = false];
    }

    message Format{
        optional string default_uuid = 1;
        optional int32 start_time_seconds = 2;
        optional int32 end_time_seconds = 3;
        optional int32 duration_seconds = 4;
        optional bool is_pano = 5;
        optional bool is_1080p = 6;
        optional knowledge.pub.PanoFormat pano_format = 7;
        optional bool is_720p = 8;
        optional string vid = 9 [deprecated = true];
    }

    message Editor{
        optional string government_editor_info = 1;
    }

    message Music{
        optional bool toplist_status = 1;
    }

    message Control{
        optional bool available_status = 1;
        optional knowledge.pub.AvailableStatus copyright_status = 2;
        repeated string platform = 3;
        optional knowledge.pub.PublicLevel public_level = 4;
        repeated knowledge.pub.DrmType drm_type = 5;
        optional knowledge.pub.PagePublishStatus page_publish_status = 6;
        repeated knowledge.pub.DistributionPlatform allowed_platform = 7;
        optional bool is_display_barrage = 8 [default = true];
        optional knowledge.pub.HotDisplayType hot_display_type = 9;
    }

    message Baidu{
        optional string baike_url = 1;
        optional string original_play_tv_station = 2;
    }

    message User{
        optional int64 uploader_id = 1;
        optional int64 mcn_id = 2;
    }

    message Release{
        // 视频页面的首次发布时间, 对应奇谱kv.time_page_first_online
        optional int64 first_online_time = 1;
        // 影片发行时间, 对应奇谱metadata.dates.global_publish_date
        optional int64 publish_time = 2;
        // 地区,从奇谱tag中获取
        repeated string area = 3;
        // 视频上线时间, 对应奇谱base.page_publish_time
        optional int64 page_publish_time = 4;
    }

    message Tag{
        repeated string common_tag = 1;
    }

    message Image{
        optional string quality_url = 1;
        optional string preview_image_url = 2;
    }

    message Keyword{
        optional string related = 1;
        optional string related_album = 2;
        repeated string seo = 3;
    }

    message Official{
        optional int64 episode_id = 1;
        optional int64 album_id =2;
    }

    message FilmTv{
        optional int64 id = 1;
    }

    message Ip{
        optional int64 id = 1;
        repeated int64 book_id= 2;
        repeated int64 comicbook_id = 3;
        repeated int64 game_id = 4;
        repeated int64 ticket_id = 5;
        repeated int64 commodity_id = 6;
        repeated int64 commodity_subject_id = 7;
        repeated int64 game_activity_id = 8;
        repeated int64 commodity_book_id = 9;
        optional bool deleted = 10;
    }

    message Category{
        optional int32 id = 1;
        optional string name = 2;
        optional string url = 3;
        optional int32 subType = 4;
        optional string subName = 5;
        optional int32 level = 6;
        optional int64 qipuId = 7;
        optional int32 parentId = 8;
        optional bool display = 9;
        optional bool ugc_display = 10;
    }

    message Pps{
        optional string url = 1;
    }

    message People{
        repeated PeopleInfo director = 1;
        repeated PeopleInfo main_charactor = 2;
        repeated PeopleInfo host = 3;
        repeated PeopleInfo guest = 4;
        repeated PeopleInfo screen_writer = 5;
        repeated PeopleInfo singer = 6;
        repeated PeopleInfo speaker = 7;
    }

    message ChildInfo{
        optional int64 id = 1;
        optional string title = 2;
        optional string page_url = 3;
        optional int32 child_episode_order = 4;
        optional int64 publish_time = 5;
        optional int64 first_online_time = 6;
        optional string image_url = 7;
        optional int64 page_publish_time = 8;
    }

    message EpisodeInfo{
        optional int64 id = 1;
        optional int32 order = 2;
    }

    message PeopleInfo {
      optional int64 id = 1;
      optional string name = 2;
      optional string image_url = 3;
      repeated string character = 4;
      optional knowledge.pub.PaopaoSummary paopao_summary = 5;
    }

    message AvailableMonthOfYear{
        optional int32 year = 1;
        repeated AvailableDayOfMonth month = 2;
    }
    
    message AvailableDayOfMonth{
        optional int32 month = 1;
        repeated int32 day = 2;
    }
    message ClipSceneShot{
        optional int64 id = 1;
        optional string description = 2; 
        optional int64 time = 3;
        optional string image_url = 4;
    }
    message Bitrate{
        optional string vid = 1;
        optional string video_bitrate = 2;
        optional string platform = 3;
    }
}
